# tauri-sveltekit-axum-moon-template

./: .editorconfig  .env.example  .gitignore  .mise.toml  .refactoring-state.yaml  .sops.yaml  .tool-versions  ABOUT.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE  README.md  SECURITY.md  bun-workspace.yaml  clippy.toml  deny.toml  moon.yml  package-lock.json  package.json  release-plz.template.toml  release-plz.toml  typos.toml
.cargo/: audit.toml  (+1 more)
agent/templates/bff-endpoint/: Cargo.toml  README.md
agent/templates/bff-endpoint/src/: adapter.rs  handler.rs  lib.rs
agent/templates/module/: Cargo.toml  README.md
agent/templates/module/src/: lib.rs
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: e2e-testing.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs
apps/desktop/src-tauri/tests/: basic.rs
crates/runtime_server/: Cargo.toml
crates/runtime_server/src/: lib.rs  main.rs  state.rs
crates/runtime_server/src/middleware/: tenant.rs
crates/runtime_server/src/ports/: surreal_db.rs
crates/runtime_server/src/routes/: health.rs  mod.rs  tenant.rs
platform/generators/: Cargo.toml
platform/generators/src/: main.rs
platform/validators/dependency-graph/: Cargo.toml
platform/validators/dependency-graph/src/: main.rs
platform/validators/model-lint/: Cargo.toml
platform/validators/model-lint/src/: main.rs
platform/validators/observability-check/: Cargo.toml
platform/validators/observability-check/src/: main.rs
platform/validators/security-check/: Cargo.toml
platform/validators/security-check/src/: main.rs
platform/validators/topology-check/: Cargo.toml
platform/validators/topology-check/src/: main.rs
servers/api/: Cargo.toml  moon.yml
servers/api/src/: config.rs  error.rs  h3_server.rs  lib.rs  main.rs  state.rs
servers/api/src/adapters/: admin.rs  mod.rs
servers/api/src/middleware/: mod.rs  tenant.rs
servers/api/src/ports/: mod.rs  surreal_db.rs  turso_db.rs
servers/api/src/routes/: admin.rs  agent.rs  counter.rs  health.rs  mod.rs  settings.rs  tenant.rs  user.rs
servers/api/tests/: http_e2e_test.rs  integration_test.rs  tracing_test.rs
servers/bff/admin-bff/: Cargo.toml
servers/bff/admin-bff/src/: config.rs  error.rs  lib.rs  main.rs  state.rs
servers/bff/admin-bff/tests/: health_test.rs
servers/gateway/: Cargo.toml  README.md
servers/gateway/src/: main.rs
servers/indexer/: Cargo.toml  README.md
servers/indexer/src/: lib.rs
servers/indexer/src/sinks/: mod.rs
servers/indexer/src/sources/: mod.rs
servers/indexer/src/transformers/: mod.rs
services/admin-service/: Cargo.toml
services/admin-service/migrations/: 001_create_admin_tables.sql
services/admin-service/src/: lib.rs
services/admin-service/src/application/: mod.rs
services/admin-service/src/contracts/: README.md  mod.rs
services/admin-service/src/domain/: mod.rs
services/admin-service/src/events/: README.md  mod.rs
services/admin-service/src/infrastructure/: mod.rs
services/admin-service/src/policies/: README.md  mod.rs
services/admin-service/src/ports/: mod.rs
services/admin-service/tests/unit/: mod.rs
services/agent-service/: Cargo.toml  README.md
services/agent-service/migrations/: 001_create_agent_tables.sql
services/agent-service/src/: lib.rs
services/agent-service/src/application/: migrations.rs  mod.rs
services/agent-service/src/domain/: error.rs  mod.rs
services/agent-service/src/infrastructure/: libsql_adapter.rs  mod.rs
services/agent-service/src/interfaces/: mod.rs
services/agent-service/src/policies/: README.md
services/agent-service/src/ports/: mod.rs
services/agent-service/src/sync/: mod.rs
services/agent-service/tests/unit/: agent_service_test.rs
services/auth-service/: Cargo.toml  README.md
services/auth-service/src/: lib.rs
services/auth-service/src/application/: mod.rs  service.rs
services/auth-service/src/contracts/: mod.rs
services/auth-service/src/domain/: error.rs  mod.rs  session.rs  token.rs
services/auth-service/src/events/: mod.rs
services/auth-service/src/infrastructure/: jwt_token_repository.rs  libsql_session_repository.rs  mock_oauth_provider.rs  mod.rs
services/auth-service/src/ports/: mod.rs
services/auth-service/tests/unit/: auth_tests.rs
services/chat-service/: Cargo.toml  README.md
services/chat-service/migrations/: 001_create_chat_tables.sql
services/chat-service/src/: lib.rs
services/chat-service/src/application/: mod.rs
services/chat-service/src/contracts/: mod.rs
services/chat-service/src/domain/: error.rs  mod.rs
services/chat-service/src/events/: mod.rs
services/chat-service/src/infrastructure/: mod.rs
services/chat-service/src/interfaces/: mod.rs
services/counter-service/: Cargo.toml  README.md  model.yaml
services/counter-service/migrations/: 001_create_counter.sql
services/counter-service/src/: lib.rs
services/event-bus/: Cargo.toml  README.md
services/event-bus/src/: lib.rs
services/settings-service/: Cargo.toml  README.md
services/settings-service/migrations/: 001_create_settings.sql
services/settings-service/src/: lib.rs
services/tenant-service/: Cargo.toml  README.md
services/tenant-service/migrations/: 001_create_tenant.sql
services/tenant-service/src/: lib.rs
services/user-service/: Cargo.toml  README.md
services/user-service/migrations/: 001_create_user_tables.sql
services/user-service/src/: lib.rs
services/user-service/tests/: lib.rs
tools/repo-release/: CHANGELOG.md  Cargo.toml
tools/repo-release/src/: lib.rs
tools/repo-tools/: Cargo.toml
tools/repo-tools/src/: cli.rs  main.rs  support.rs
workers/indexer/: Cargo.toml  README.md
workers/indexer/src/: main.rs
workers/outbox-relay/: Cargo.toml  README.md
workers/outbox-relay/src/: config.rs  main.rs
workers/projector/: Cargo.toml  README.md
workers/projector/src/: config.rs  error.rs  live.rs  main.rs  source.rs
workers/sync-reconciler/: Cargo.toml  README.md
workers/sync-reconciler/src/: main.rs
(+941 files in other folders)
