[workspace]
members = [
    # Apps
    "apps/desktop/src-tauri",
    # Core
    "packages/core/workspace-hack",
    "packages/core/domain",
    "packages/core/kernel",
    "packages/core/platform",
    # Contracts
    "packages/contracts/api",
    "packages/contracts/auth",
    "packages/contracts/events",
    "packages/contracts/errors",
    # Shared
    "packages/shared/errors",
    "packages/shared/utils",
    "packages/shared/config",
    "packages/shared/env",
    "packages/shared/testing",
    "packages/shared/types",
    # Adapters
    "packages/adapters/telemetry/otel",
    "packages/adapters/telemetry/tracing",
    "packages/adapters/hosts/tauri",
    "packages/adapters/hosts/base-app",
    "packages/adapters/hosts/browser-extension",
    "packages/adapters/hosts/farcaster-miniapp",
    "packages/adapters/hosts/telegram-miniapp",
    "packages/adapters/storage/surrealdb",
    "packages/adapters/storage/turso",
    "packages/adapters/storage/sqlite",
    "packages/adapters/storage/extension-storage",
    "packages/adapters/storage/indexeddb",
    "packages/adapters/storage/tauri-store",
    "packages/adapters/auth/google",
    "packages/adapters/auth/dpop",
    "packages/adapters/auth/oauth",
    "packages/adapters/auth/passkey",
    "packages/adapters/cache",
    "packages/adapters/chains/base",
    "packages/adapters/chains/evm",
    "packages/adapters/chains/solana",
    "packages/adapters/chains/ton",
    "packages/adapters/protocols/atproto",
    "packages/adapters/protocols/farcaster",
    "packages/adapters/protocols/nostr",
    # Features
    "packages/features/auth",
    "packages/features/counter",
    "packages/features/admin",
    "packages/features/agent",
    "packages/features/chat",
    "packages/features/settings",
    "packages/features/feed",
    "packages/features/notifications",
    "packages/features/payments",
    "packages/features/profile",
    "packages/features/social-graph",
    "packages/features/wallet",
    # Services (Clean Architecture — incremental implementation)
    "services/user-service",
    "services/tenant-service",
    "services/counter-service",
    "services/chat-service",
    "services/agent-service",
    "services/event-bus",
    "services/admin-service",
    "services/settings-service",
    # Servers
    "servers/api",
    "servers/gateway",
    "servers/indexer",
    "servers/bff/web-bff",
    "servers/bff/admin-bff",
    # Workers
    "workers/outbox-relay",
    "workers/indexer",
    "workers/projector",
    "workers/scheduler",
    "workers/sync-reconciler",
    # Platform
    "platform/validators/model-lint",
    "platform/validators/dependency-graph",
    "platform/validators/contract-drift",
    "platform/generators",
]
resolver = "3"

# ── Workspace Lints ──────────────────────────────────────────
# Starter template: allow stub code, unused items, and dead code
# These will be tightened as the project matures
[workspace.lints.clippy]
# Allow stub/placeholder code
result_large_err = "allow"
derivable_impls = "warn"    # warn, not deny — stub code may need manual Default
redundant_closure = "warn"
collapsible_if = "warn"
io_other_error = "warn"
unnecessary_cast = "warn"
unnecessary_min_or_max = "warn"
useless_conversion = "warn"

[workspace.lints.rust]
dead_code = "allow"
unused_imports = "allow"
unused_variables = "allow"

[workspace.package]
rust-version = "1.94"

[workspace.dependencies]
# Internal crates
domain = { path = "packages/core/domain" }
kernel = { path = "packages/core/kernel" }
platform = { path = "packages/core/platform" }
contracts_api = { path = "packages/contracts/api" }
contracts_auth = { path = "packages/contracts/auth" }
contracts_events = { path = "packages/contracts/events" }
contracts_errors = { path = "packages/contracts/errors" }
shared_errors = { path = "packages/shared/errors" }
shared_utils = { path = "packages/shared/utils" }
adapter_telemetry_otel = { path = "packages/adapters/telemetry/otel" }
adapter_telemetry_tracing = { path = "packages/adapters/telemetry/tracing" }
storage_surrealdb = { path = "packages/adapters/storage/surrealdb" }
storage_turso = { path = "packages/adapters/storage/turso" }
runtime_tauri = { path = "packages/adapters/hosts/tauri" }
adapter-google = { path = "packages/adapters/auth/google" }
feature-auth = { path = "packages/features/auth" }
feature-counter = { path = "packages/features/counter" }
feature-admin = { path = "packages/features/admin" }
feature-agent = { path = "packages/features/agent" }
feature-chat = { path = "packages/features/chat" }
feature-settings = { path = "packages/features/settings" }
counter-service = { path = "services/counter-service" }
tenant-service = { path = "services/tenant-service" }
user-service = { path = "services/user-service" }
agent-service = { path = "services/agent-service" }
admin-service = { path = "services/admin-service" }
settings-service = { path = "services/settings-service" }
event-bus = { path = "services/event-bus" }
web-bff = { path = "servers/bff/web-bff" }

# Tauri
tauri = { version = "2.10.3", features = ["tray-icon"] }
tauri-build = "2.5.6"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-window-state = "2"
tauri-plugin-libsql = "0.1.0"
tauri-plugin-log = { version = "2", features = ["colored"] }

# Backend - Axum stack
axum = { version = "0.8.8", features = ["json"] }
axum-extra = { version = "0.10", features = ["cookie"] }
tokio = { version = "1.50.0", features = ["full"] }
reqwest = { version = "0.13.2", features = ["rustls", "form", "json", "stream"] }

# Axum middleware stack (per D-07, D-09)
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "timeout", "request-id"] }
hyper = { version = "1", features = ["full"] }

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-log = "0.2"
log = "0.4"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
utoipa = "5"

# TypeScript type generation
ts-rs = { version = "10", features = ["chrono-impl", "uuid-impl", "serde-json-impl"] }

# Error handling (2026 best practices)
thiserror = "2"
anyhow = "1"

# Configuration (2026 best practices - figment)
figment = { version = "0.10", features = ["toml", "env"] }

# Validation (2026 best practices)
validator = { version = "0.20", features = ["derive"] }

# Tracing enhancements
tracing-error = "0.2"

# Testing
mockito = "1"

# Testing infrastructure (2026 harness)
proptest = "1"
testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["postgres"] }
tracing-test = "0.2"
trybuild = "1"

# HTTP client utilities
http-body-util = "0.1"

# Environment variables (2026 best practice - dotenvy)
dotenvy = "0.15.7"

# Database
surrealdb = { version = "3.0.5", features = ["kv-mem"] }

# Cache (replaces Redis per D-10/D-12)
moka = { version = "0.12", features = ["future"] }

# Auth
jsonwebtoken = { version = "10.3.0", features = ["aws_lc_rs"] }
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"

# Async trait
async-trait = "0.1"

# Utilities
futures-util = "0.3"
url = "2"
uuid = { version = "1.23.0", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bytes = "1"

# ── Phase 5 (DB/Infra) ────────────────────────────────────────
# Local embedded DB
rusqlite_migration = "1.3"

# HTTP/3 transport (per D-07, D-09)
quinn = "0.11"
h3 = "0.0.6"
rcgen = "0.13"  # Self-signed cert generation for dev

# ── Future Phase Dependencies ──────────────────────────────────
# Phase 6 (Auth)
# oauth2 = "5.0"  # Phase 6: Google OAuth flow

# Phase 8 (Desktop)
tauri-plugin-single-instance = "2"
# tauri-plugin-updater = "2"  # Phase 9: Auto-update

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = true
panic = "abort"

[profile.dev]
panic = "unwind"
incremental = true
codegen-units = 256

# ── Coverage Profile ─────────────────────────────────────────
# Third-party dependencies don't need full debug info for coverage
# This significantly reduces build size and time
[profile.dev.package."*"]
debug = 1                 # 2026 best practice: line tables only (better stack traces)
incremental = true
opt-level = 1

[profile.dev.package]
# Keep debug info for our own crates to get accurate coverage
# (workspace crates inherit from default profile)

# ── sccache optimization profile ───────────────────────────
# When using sccache (RUSTC_WRAPPER=sccache), this ensures
# maximum cache hit rate across rebuilds
[profile.dev.build-override]
incremental = false
debug = 0

# ── E2E testing profile ────────────────────────────────────
# Optimized for fast compilation during E2E test runs
# Inherits from dev profile but skips heavy optimizations
[profile.e2e]
inherits = "dev"
opt-level = 0
debug = false
strip = true
