[package]
name = "axum-harness"
version = "0.4.1"
edition = "2024"
rust-version = "1.94"
publish = false
license = "Apache-2.0"
description = "Repository-level release anchor for the axum-harness template"
repository = "https://github.com/openclosed-org/axum-harness"
include = [
    "tools/repo-release/src/**",
    "Cargo.toml",
    "Cargo.lock",
    "release-plz.toml",
    "release-plz.template.toml",
    "Justfile",
    "justfiles/template.just",
    "README.md",
    "CONTRIBUTING.md",
    "CHANGELOG.md",
    "docs/**",
    "servers/**",
    "services/**",
    "workers/**",
    "platform/**",
    "packages/contracts/**",
    "packages/kernel/**",
    "packages/platform/**",
    "packages/runtime/**",
    "packages/messaging/**",
    "packages/data/**",
    "packages/data-traits/**",
    "packages/data-adapters/**",
    "packages/authn/**",
    "packages/authz/**",
    "packages/observability/**",
]

[workspace]
members = [
    "tools/repo-tools",
    # Core
    "packages/workspace-hack",
    "packages/observability",
    "packages/data",
    "packages/data-traits",
    # Worker runtime
    "packages/worker-runtime",
    # Foundation
    "packages/kernel",
    "packages/platform",
    "packages/runtime",
    # Contracts
    "packages/contracts/api",
    "packages/contracts/auth",
    "packages/contracts/events",
    "packages/contracts/errors",
# Shared (only utils remains; stubs removed)
    # packages/shared/utils removed — contents merged into kernel
# Adapters (only crates with real code)
    "packages/observability/adapters/opentelemetry",
    "packages/observability/adapters/tracing",
    "packages/data-adapters/surrealdb",
    "packages/data-adapters/turso",
    "packages/authn/adapters/google",
    "packages/authn/adapters/google-backend",
    "packages/authn/oidc-verifier",
    # AuthZ
    "packages/authz",
    # SDK
    "packages/sdk/rust/counter",
    "packages/sdk/rust/counter-embedded",
    "packages/sdk/rust/counter-http",
    # Services
    "services/user-service",
    "services/tenant-service",
    "services/auth-service",
    "services/counter-service",
    "packages/messaging",
    # Servers
    "servers/gateway",
    "servers/bff/web-bff",
    # Workers
    "workers/outbox-relay",
    "workers/indexer",
    "workers/projector",
    "workers/scheduler",
    "workers/sync-reconciler",
    # Platform
    "platform/validators/model-lint",
    "platform/validators/dependency-graph",
    "platform/validators/contract-drift",
    "platform/validators/topology-check",
    "platform/validators/security-check",
    "platform/validators/observability-check",
    "platform/generators",
]
exclude = ["apps/desktop/src-tauri"]
resolver = "3"

# ── Workspace Lints ──────────────────────────────────────────
# Starter template: allow stub code, unused items, and dead code
# These will be tightened as the project matures
[workspace.lints.clippy]
# Allow stub/placeholder code
result_large_err = "allow"
derivable_impls = "warn"    # warn, not deny — stub code may need manual Default
redundant_closure = "warn"
collapsible_if = "warn"
io_other_error = "warn"
unnecessary_cast = "warn"
unnecessary_min_or_max = "warn"
useless_conversion = "warn"

[workspace.lints.rust]
dead_code = "allow"
unused_imports = "allow"
unused_variables = "allow"

[workspace.package]
rust-version = "1.94"

[lib]
path = "tools/repo-release/src/lib.rs"

[lints]
workspace = true

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
xshell = "0.2"
walkdir = "2"
serde_yaml = "0.9"
toml = "0.9"
tempfile = "3"
flate2 = "1"
tar = "0.4"
zip = { version = "4", default-features = false, features = ["deflate"] }
regex = "1"
# Internal crates
data = { path = "packages/data", version = "0.1.0" }
data-traits = { path = "packages/data-traits", version = "0.1.0" }
worker-runtime = { path = "packages/worker-runtime", version = "0.1.0" }
kernel = { path = "packages/kernel", version = "0.1.0" }
platform = { path = "packages/platform", version = "0.1.0" }
runtime = { path = "packages/runtime", version = "0.1.0" }
contracts_api = { path = "packages/contracts/api", version = "0.1.0" }
contracts_auth = { path = "packages/contracts/auth", version = "0.1.0" }
contracts_events = { path = "packages/contracts/events", version = "0.1.0" }
contracts_errors = { path = "packages/contracts/errors", version = "0.1.0" }
adapter_telemetry_otel = { package = "adapter-telemetry-otel", path = "packages/observability/adapters/opentelemetry", version = "0.1.0" }
adapter_telemetry_tracing = { package = "adapter-telemetry-tracing", path = "packages/observability/adapters/tracing", version = "0.1.0" }
storage_surrealdb = { path = "packages/data-adapters/surrealdb", version = "0.1.0" }
storage_turso = { path = "packages/data-adapters/turso", version = "0.1.0" }
adapter-google = { path = "packages/authn/adapters/google", version = "0.1.0" }
adapter-google-backend = { path = "packages/authn/adapters/google-backend", version = "0.1.0" }
authn-oidc-verifier = { path = "packages/authn/oidc-verifier", version = "0.1.0" }
authz = { path = "packages/authz", version = "0.1.0" }
workspace-hack = { path = "packages/workspace-hack", version = "0.1.0" }
observability = { path = "packages/observability", version = "0.1.0" }
sdk-counter = { path = "packages/sdk/rust/counter", version = "0.1.0" }
sdk-counter-embedded = { path = "packages/sdk/rust/counter-embedded", version = "0.1.0" }
counter-service = { path = "services/counter-service", version = "0.1.0" }
tenant-service = { path = "services/tenant-service", version = "0.1.0" }
user-service = { path = "services/user-service", version = "0.1.0" }
auth-service = { path = "services/auth-service", version = "0.1.0" }
event-bus = { path = "packages/messaging", version = "0.1.0" }
web-bff = { path = "servers/bff/web-bff", version = "0.1.0" }

# Tauri
tauri = { version = "2.10.3", features = ["tray-icon"] }
tauri-build = "2.5.6"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-window-state = "2"
tauri-plugin-libsql = "0.1.0"
tauri-plugin-log = { version = "2", features = ["colored"] }

# Backend - Axum stack
axum = { version = "0.8.9", features = ["json"] }
axum-extra = { version = "0.12.6", features = ["cookie"] }
tokio = { version = "1.52.1", features = ["full"] }
reqwest = { version = "0.13.2", features = ["rustls", "form", "json", "stream"] }
ctrlc = "3"

# Axum middleware stack (per D-07, D-09)
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "timeout", "request-id"] }
hyper = { version = "1", features = ["full"] }

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-log = "0.2"
tracing-opentelemetry = "0.28"
log = "0.4"
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["trace", "grpc-tonic"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
utoipa = { version = "5.4.0", features = ["yaml", "axum_extras"] }
utoipa-axum = "0.2.0"

# Error handling (2026 best practices)
thiserror = "2"
anyhow = "1"

# Configuration (2026 best practices - figment)
figment = { version = "0.10", features = ["toml", "env"] }

# Validation (2026 best practices)
validator = { version = "0.20", features = ["derive"] }

# Tracing enhancements
tracing-error = "0.2"

# Testing
mockito = "1"

# Testing infrastructure (2026 harness)
proptest = "1"
testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["postgres"] }
tracing-test = "0.2"
trybuild = "1"

# HTTP client utilities
http-body-util = "0.1"

# Environment variables (2026 best practice - dotenvy)
dotenvy = "0.15.7"

# Database
surrealdb = { version = "3.0.5", features = ["kv-mem"] }

# Cache (replaces Redis per D-10/D-12)
moka = { version = "0.12", features = ["future"] }

# Auth
jsonwebtoken = { version = "10.3.0", features = ["aws_lc_rs"] }
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
urlencoding = "2.1"
hex = "0.4"

# Async trait
async-trait = "0.1"

# Utilities
futures-util = "0.3"
url = "2"
uuid = { version = "1.23.0", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bytes = "1"

# ── Phase 5 (DB/Infra) ────────────────────────────────────────
# Local embedded DB
rusqlite_migration = "1.3"

# HTTP/3 transport (per D-07, D-09)
quinn = "0.11"
h3 = "0.0.6"
rcgen = "0.13"  # Self-signed cert generation for dev

# ── Future Phase Dependencies ──────────────────────────────────
# Phase 6 (Auth)
# oauth2 = "5.0"  # Phase 6: Google OAuth flow

# Phase 8 (Desktop)
tauri-plugin-single-instance = "2"
# tauri-plugin-updater = "2"  # Phase 9: Auto-update

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = true
panic = "abort"

[profile.dev]
panic = "unwind"
incremental = true
codegen-units = 256
debug = 1                  # line tables only — reduces .o size significantly
strip = "debuginfo"        # strip debug info from rlibs/binaries in deps

# ── Coverage Profile ─────────────────────────────────────────
# Third-party dependencies don't need full debug info for coverage
# This significantly reduces build size and time
[profile.dev.package."*"]
debug = 1                 # 2026 best practice: line tables only (better stack traces)
incremental = true
opt-level = 1

[profile.dev.package]
# Keep debug info for our own crates to get accurate coverage
# (workspace crates inherit from default profile)

# ── sccache optimization profile ───────────────────────────
# When using sccache (RUSTC_WRAPPER=sccache), this ensures
# maximum cache hit rate across rebuilds
[profile.dev.build-override]
incremental = false
debug = 0

# ── E2E testing profile ────────────────────────────────────
# Optimized for fast compilation during E2E test runs
# Inherits from dev profile but skips heavy optimizations
[profile.e2e]
inherits = "dev"
opt-level = 0
debug = false
strip = true
