[package]
name = "runtime_server"
version = "0.1.0"
edition = "2024"

[dependencies]
# Internal crates
domain = { workspace = true }
usecases = { workspace = true }
contracts_api = { workspace = true }
storage_surrealdb = { workspace = true }
storage_libsql = { workspace = true }
feature-counter = { workspace = true }
feature-admin = { workspace = true }
feature-agent = { workspace = true }

# Axum HTTP framework (per D-01, D-02, D-09)
axum = { workspace = true }
axum-extra = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Middleware stack (per D-01)
tower = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling (2026 best practices)
thiserror = { workspace = true }
anyhow = { workspace = true }

# Configuration (2026 best practices)
figment = { workspace = true }

# Validation (2026 best practices)
validator = { workspace = true }

# Tracing enhancements
tracing-error = { workspace = true }

# Testing
mockito = { workspace = true }

# Database
surrealdb = { workspace = true }

# Cache
moka = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# Auth
jsonwebtoken = { workspace = true }
base64 = { workspace = true }

# Utilities
chrono = { workspace = true }
uuid = { workspace = true, features = ["v7"] }
async-trait = "0.1"
futures-util = "0.3"

# HTTP/3 transport (per D-07, D-08) — gated behind h3 feature
quinn = { workspace = true, optional = true }
h3 = { workspace = true, optional = true }
rcgen = { workspace = true, optional = true }

# Tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-log = { workspace = true }

# API documentation
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

[dev-dependencies]
http-body-util = "0.1"
tower = { workspace = true, features = ["util"] }

[features]
default = []
http3 = ["dep:quinn", "dep:h3", "dep:rcgen"]
