[package]
name = "indexer"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
# Internal
contracts_events = { workspace = true }
domain = { workspace = true }

# Core
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true, features = ["v7"] }

[dev-dependencies]

[lints]
workspace = true
