[package]
name = "chat-service"
version = "0.1.0"
edition = "2024"
description = "Chat domain service: messages, sessions, real-time push"

[dependencies]
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
futures-util = { workspace = true }
