[package]
name = "chat-service"
version = "0.1.0"
edition = "2021"
description = "Chat domain service: conversations, messages, participants"

[dependencies]
# Internal
domain = { workspace = true }
kernel = { workspace = true }
feature-chat = { workspace = true }
contracts_api = { workspace = true }

# Core
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["v7", "serde"] }

# Async
tokio = { workspace = true, features = ["sync"] }
futures-util = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "sync"] }
