[package]
name = "counter-service"
version = "0.1.0"
edition = "2024"
description = "Counter domain service: counting, statistics, analytics"
license = "MIT"
rust-version.workspace = true

[dependencies]
# Core abstractions (TenantId, LibSqlPort)
kernel = { workspace = true }
data = { workspace = true }

# Contracts (DTOs)
contracts_api = { workspace = true }
contracts_events = { workspace = true }

# Minimal runtime
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }

# Trait-only feature for downstream consumers (BFFs)
# When BFF depends on counter-service with features = ["trait-only"],
# it gets the CounterService trait but zero implementation.

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
serde_json = { workspace = true }
rusqlite = { version = "0.32", features = ["bundled"] }

[features]
default = []
# When enabled, only exports trait definitions (no impl).
# Used by BFF/server composition layers that depend on traits only.
trait-only = []

[[test]]
name = "unit_tests"
path = "tests/unit/counter_service_test.rs"

[[test]]
name = "integration_tests"
path = "tests/integration/full_stack_test.rs"

[lints]
workspace = true
