[package]
name = "tenant-service"
version = "0.1.0"
edition = "2024"
description = "Tenant domain service — multi-tenant isolation, member management, tenant lifecycle"
license = "MIT"
rust-version.workspace = true

[dependencies]
# Core abstractions
domain = { workspace = true }
kernel = { workspace = true }

# Contracts
contracts_api = { workspace = true }

# Minimal runtime
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }

[[test]]
name = "unit_tests"
path = "tests/unit/tenant_service_test.rs"

[lints]
workspace = true
